test/regress/regress-26.txt
;;; TOOL: run-gen-wasm-interp
;;; ERROR: 1
magic
version
section(TABLE) {
  count[1]
  anyfunc
  has_max[0]
  initial[0]
}
section(ELEM) {
  count[1]
  flags[0]
  addr[end]
}
(;; STDERR ;;;
out/test/regress/regress-26/regress-26.wasm:0000012: error: type mismatch in initializer expression, expected [i32] but got []
0000013: error: EndElemSegmentInitExpr callback failed
;;; STDERR ;;)
